Add initial notes

--- a/gpu/gpu_docker/Dockerfile
+++ b/gpu/gpu_docker/Dockerfile
@@ -2,11 +2,9 @@ FROM mcr.microsoft.com/windows:10.0.17763.3887
 
 WORKDIR C:/App
 
-COPY ["tinyyolov2-7.tar.gz", "c:/App/"]
-
-# Download and extract the ONNX model to be used for evaluation.
-RUN tar.exe -xf tinyyolov2-7.tar.gz && \
-    del tinyyolov2-7.tar.gz
+RUN curl.exe -o tiny_yolov2.tar.gz https://raw.githubusercontent.com/EliiseS/aks-windows-gpu-acceleration/main/gpu/gpu_docker/tinyyolov2-7.tar.gz && \
+    tar.exe -xf tiny_yolov2.tar.gz && \
+    del tiny_yolov2.tar.gz
 
 # Download and extract cli tool for evaluation .onnx model with WinML.
 RUN curl.exe -L -o WinMLRunner_x64_Release.zip https://github.com/microsoft/Windows-Machine-Learning/releases/download/1.2.1.1/WinMLRunner.v1.2.1.1.zip && \
