--- a/k8s-directx-device-plugin/k8s-directx-device-plugin.yaml
+++ b/k8s-directx-device-plugin/k8s-directx-device-plugin.yaml
@@ -21,7 +21,7 @@ spec:
           runAsUserName: "NT AUTHORITY\\SYSTEM"
       containers:
         - name: directx-device-plugin
-          image: mcr.microsoft.com/aks/aks-windows-gpu-device-plugin:latest
+          image: mcr.microsoft.com/aks/aks-windows-gpu-device-plugin:0.0.1
           env:
             - name: "DIRECTX_GPU_MATCH_NAME"
               value: "nvidia"
